--- a/Web/render-html/src/templates/index.html
+++ b/Web/render-html/src/templates/index.html
@@ -13,7 +13,10 @@
         }
         .container {
             height: 100%;
-            margin: 3%;
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         #textarea {
             height: 50vh;
